<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="activity_title">Activity</string>
    <string name="ad_info_text">Ad</string>
    <string name="ads_provider_enabled">true</string>
    <string name="amazon_ads_key">2f72a0284acc4848a9bcbed79675a9a5</string>
    <string name="app_name">Hornet</string>
    <string name="app_upgrade_message">Upgrading app from previous version</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appsflyer_dev_key">6dwdiie8PasC3wyHB8r9nP</string>
    <string name="asset_statements">"[{
 \"relation\": [\"delegate_permission/common.handle_all_urls\"],
 \"target\": {
 \"namespace\": \"web\",
 \"site\": \"https://hornetapp.com\",
 }
}]"</string>
    <string name="beta_server_url">https://beta.gethornet.com/api/v3/</string>
    <string name="billing_EncodedPublicKey">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAynVp1tYBiPGnhO3yLr62mjT44881zofaxHoKdZWl/wXl4/KW7W/E454VMQZPa64SP3eVSr6k/CVRoekdHRFtaoglLCy13OHlhmUYOu/CEnryJ7ZV24rK3ShQNQGgPD5wVplteVp0qghJcmCtLEY2CkrB7IATRNncm8ua4I7pxlqywSpPfT/beyTm0wGO1Woud0OxEBIsrYdhKCeL/JnRQO2JsP2NjTLNZoyVHxTUMPkEdEUkp2Fvgq+L55P9PTqRzH5Hq1PXDua8p4rkRzsRF2Y3IjzKO42ab7m7RcXIDHoqLvMkbPs+28EH7gnK8WeFV1VUDrf+fafHSCOEVgLGbwIDAQAB</string>
    <string name="block_user">Do you want to block this member?</string>
    <string name="blocked_members_delete">Unblock</string>
    <string name="blocked_members_delete_all">Unblock all</string>
    <string name="blocked_members_done">Done</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="button_create_account">Create free account</string>
    <string name="button_create_later">Create account later</string>
    <string name="button_login">ZALOGINITSYA</string>
    <string name="button_signup_faceboook">Sign up with Facebook</string>
    <string name="camera_failed_to_create_target_file">Something went wrong and camera can’t be used.</string>
    <string name="camera_permission_rationale">Camera permission is needed to show the camera as a photo source.</string>
    <string name="camera_permission_rationale_title">Permission to use the camera</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat_attach_menu_title">Send an attachment</string>
    <string name="chat_clear_all_conversations_failed">Clear all conversations failed</string>
    <string name="chat_clear_conversation_failed">Clear conversation failed</string>
    <string name="chat_delete">Clear</string>
    <string name="chat_delete_all">Clear all</string>
    <string name="chat_done">Done</string>
    <string name="chat_heart_limit_reached">You have to wait until tomorrow before you can send another heart to this person</string>
    <string name="chat_list_clear_failed">Chat clear failed.</string>
    <string name="chat_mark_all_as_read">Mark all as read</string>
    <string name="chat_message_state_failed">Sending failed, tap to retry</string>
    <string name="chat_message_state_sending">Sending…</string>
    <string name="chat_messaging_choose_photo_from_library">Choose from library</string>
    <string name="chat_messaging_clear_chat">Clear chat</string>
    <string name="chat_messaging_forward_favorite">Hey, check out this guy I found.</string>
    <string name="chat_messaging_loading_problem">Cannot load messages, try again later or contact feedback@gethornet.com if this keeps happening</string>
    <string name="filters_age_label">@string/profile_age</string>
    <string name="filters_ethnicity_label">@string/profile_ethnicity</string>
    <string name="filters_height_label">@string/profile_height</string>
    <string name="filters_looking_for_label">@string/profile_looking_for</string>
    <string name="filters_no_min_max_preference">No min – No max</string>
    <string name="filters_no_preference">No preference set</string>
    <string name="filters_online_secondary">Show guys that are online</string>
    <string name="filters_only_online_label">Only Online</string>
    <string name="filters_only_positive_kys_label">KYS Positive</string>
    <string name="filters_only_positive_kys_secondary">Show only KYS positive guys</string>
    <string name="filters_relationship_label">@string/profile_relationship_status</string>
    <string name="filters_sexual_preference_label">Role</string>
    <string name="filters_weight_label">@string/profile_weight</string>
    <string name="global_chats">Chats</string>
    <string name="global_discover">Discover</string>
    <string name="global_username">Username</string>
    <string name="kys_help_section1" formatted="false"><b>Negative:</b>"You have tested negative for HIV. 

"<b>Negative, on PrEP:</b>" You have tested Negative, but are also taking a drug called a “Pre-Exposure Prophylaxis”. (Also known by its brand name, Truvada). PrEP is greater than 90% effective at preventing HIV when the pill is taken daily. 

"<b>Positive:</b>" You have tested positive for HIV. 

"<b>Positive, undetectable:</b> You have tested Positive for HIV, but you are taking antiretroviral therapy drugs resulting in an undetectable “viral load”. Studies have shown that HIV Positive people on this type of treatment can reduce the likelihood of transmitting the virus to their HIV Negative partners by as much as 96%.</string>
    <string name="kys_help_section2">"In June 1981 the first clusters of what was to become known as AIDS were reported in young gay men in Los Angeles. Thirty years later, men who have sex with men remain the population most impacted by HIV. As many as 20% of gay men in major urban areas are living with HIV/AIDS. 

HIV is a virus that weakens your body’s immune system over time.When left untreated HIV progresses in your immune system and your body can no longer fight off other disease, which medical experts call AIDS. 

Early detection can make a difference in your treatment, the sooner you’re tested the better off you are and can make informed choices, for yourself and your partners. While there is no cure for HIV/AIDS, getting tested often can help you stay well by getting the right treatment early. That treatment prolongs the lives of many people infected with HIV and lowers their chance of transmitting the virus. 

When treated with antiviral therapy people can live long healthy lives with an HIV diagnosis. HIV Positive members of our community are strong HIV treatment and prevention advocates. Sharing your positive status can mean strength, empowerment and being an advocate against stigma. 

Knowing your status and discussing the status of your sexual partner is how to make informed choices. You can make decisions to get tested, and if positive find treatment, or if negative you may decide to take PreP to help prevent possible infection in yourself. 

Getting tested is fast and rapid and there are many free testing sites around the world. Get familiar with one and get into a routine of getting tested every six months. While we should all work toward the goal of no new HIV infections, only you can take care of your own health. 

We encourage you to share your HIV status in your Hornet profile, and to keep it current, for your own health benefit and others. We can all work together to prevent HIV spreading and reduce stigma."</string>
    <string name="kys_help_title1">What do the different KYS options mean?</string>
    <string name="kys_help_title2">More about HIV/AIDS:</string>
    <string name="profile_about_you">About you</string>
    <string name="profile_age">Age</string>
    <string name="profile_age_hint">Do not show</string>
    <string name="profile_edit_kys_info_line2">KYS allows you to optionally disclose your HIV status on your profile. Click for more information on the different options and what they mean.</string>
    <string name="profile_enter_a_name_hint">Enter a name</string>
    <string name="profile_ethnicity">Ethnicity</string>
    <string name="profile_ethnicity_hint">Do not show</string>
    <string name="profile_feed">Profile</string>
    <string name="profile_headline">Headline</string>
    <string name="profile_headline_hint">Enter a headline</string>
    <string name="profile_height">Height</string>
    <string name="profile_height_hint">Do not show</string>
    <string name="profile_identity">Role</string>
    <string name="profile_identity_hint">Do not show</string>
    <string name="profile_kys">KYS</string>
    <string name="profile_kys_hint">Do not show</string>
    <string name="profile_looking_for">Looking For</string>
    <string name="profile_looking_for_hint">Do not show</string>
    <string name="profile_name">Name</string>
    <string name="profile_open_private_gallery">Open Private Gallery</string>
    <string name="profile_popup_menu_block">Block this member</string>
    <string name="profile_popup_menu_report">Report this member</string>
    <string name="profile_relationship_hint">Do not show</string>
    <string name="profile_relationship_status">Relationship status</string>
    <string name="profile_send_heart">Send Heart</string>
    <string name="profile_settings_hashtag_suggestions_label">Add tags to your profile text:</string>
    <string name="profile_share">Share</string>
    <string name="profile_unit_of_measure">Unit of Measure</string>
    <string name="profile_walkthrough_add_photo_button">Add photo</string>
    <string name="profile_walkthrough_add_photo_from_facebook_button">Use Facebook photo</string>
    <string name="profile_walkthrough_add_photo_from_google_button">Use Google photo</string>
    <string name="profile_walkthrough_step_2_subtitle">Add a photo, so guys can see you!</string>
    <string name="profile_weight">Weight</string>
    <string name="profile_weight_hint">Do not show</string>
    <string name="settings_profile_edit">Edit profile</string>
</resources>