<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_heartsting_white_24dp" android:id="@id/action_sting" android:title="@string/profile_send_heart" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_share_white_24dp" android:id="@id/action_share" android:title="@string/profile_share" app:showAsAction="always" />
    <item android:id="@id/action_open_private_gallery" android:title="@string/profile_open_private_gallery" app:showAsAction="never" />
    <item android:icon="@drawable/ic_do_not_disturb_alt_black_24dp" android:id="@id/action_block" android:title="@string/profile_popup_menu_block" app:showAsAction="never" />
    <item android:icon="@drawable/ic_flag_black_24dp" android:id="@id/action_report" android:title="@string/profile_popup_menu_report" app:showAsAction="never" />
</menu>