<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.hornet.android.widget.ContentLoadingProgressView android:id="@id/contentLoadingProgressIndicatorView" android:background="@android:color/transparent" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="4.0dip" app:hideWithInvisibility="true">
            <ProgressBar android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="4.0dip" android:indeterminate="true" style="?android:progressBarStyleHorizontal" />
        </com.hornet.android.widget.ContentLoadingProgressView>
        <com.hornet.android.views.FilterItem_ android:id="@id/ageFilterView" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:mainText="@string/filters_age_label" app:secondaryText="@string/filters_no_min_max_preference" />
        <com.hornet.android.views.FilterItem_ android:id="@id/ethnicityFilterView" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:mainText="@string/filters_ethnicity_label" app:secondaryText="@string/filters_no_preference" />
        <com.hornet.android.views.FilterItem_ android:id="@id/heightPremiumFilterView" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:mainText="@string/filters_height_label" app:secondaryText="@string/filters_no_min_max_preference" />
        <com.hornet.android.views.FilterItem_ android:id="@id/weightPremiumFilterView" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:mainText="@string/filters_weight_label" app:secondaryText="@string/filters_no_min_max_preference" />
        <com.hornet.android.views.FilterItem_ android:id="@id/sexualPreferencePremiumFilterView" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:mainText="@string/filters_sexual_preference_label" app:secondaryText="@string/filters_no_preference" />
        <com.hornet.android.views.FilterItem_ android:id="@id/onlyPositiveKysFilterView" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:mainText="@string/filters_only_positive_kys_label" app:secondaryText="@string/filters_only_positive_kys_secondary" app:showSwitch="true" />
        <View android:background="@color/filters_divider" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" />
        <com.hornet.android.views.FilterItem_ android:id="@id/onlyOnlinePremiumFilterView" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:mainText="@string/filters_only_online_label" app:secondaryText="@string/filters_online_secondary" app:showSwitch="true" />
        <com.hornet.android.views.FilterItem_ android:id="@id/lookingForPremiumFilterView" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:mainText="@string/filters_looking_for_label" app:secondaryText="@string/filters_no_preference" />
        <com.hornet.android.views.FilterItem_ android:id="@id/relationshipPremiumFilterView" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:mainText="@string/filters_relationship_label" app:secondaryText="@string/filters_no_preference" />
    </LinearLayout>
</ScrollView>