<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:paddingTop="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="16.0dip">
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:paddingBottom="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/kys_help_title1" />
        <TextView android:textSize="14.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/kys_help_section1" />
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:paddingTop="20.0dip" android:paddingBottom="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/kys_help_title2" />
        <TextView android:textSize="14.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/kys_help_section2" />
    </LinearLayout>
</ScrollView>