<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.hornet.android.views.botnav.BottomBarItem_ android:id="@id/feed" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_feed" android:minWidth="80.0dip" android:text="@string/activity_title" android:layout_weight="1.0" />
    <com.hornet.android.views.botnav.BottomBarItem_ android:id="@id/nearby" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_discover" android:minWidth="80.0dip" android:text="@string/global_discover" android:layout_weight="1.0" />
    <com.hornet.android.views.botnav.BottomBarItem_ android:id="@id/chat" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_chat" android:minWidth="80.0dip" android:text="@string/global_chats" android:layout_weight="1.0" />
    <com.hornet.android.views.botnav.BottomBarItem_ android:id="@id/profile" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_profile" android:minWidth="80.0dip" android:text="@string/profile_feed" android:layout_weight="1.0" />
</merge>