<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@id/coordinator_layout" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" android:id="@id/app_bar_layout" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <android.support.design.widget.CollapsingToolbarLayout android:id="@id/collapsing_toolbar" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?actionBarSize" app:contentScrim="?colorPrimary" app:expandedTitleMarginBottom="32.0dip" app:expandedTitleMarginEnd="64.0dip" app:expandedTitleMarginStart="48.0dip" app:layout_scrollFlags="exitUntilCollapsed|scroll|snap" app:statusBarScrim="@android:color/transparent" app:title="@string/settings_profile_edit" app:titleEnabled="true" app:toolbarId="@id/toolbar">
            <com.hornet.android.widget.SquareImageView android:id="@id/profile_image" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@mipmap/global_button_user_placeholder" android:scaleType="centerCrop" app:layout_collapseMode="parallax" />
            <android.support.v7.widget.Toolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:layout_collapseMode="pin" app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView android:id="@id/scroll_view" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_name" style="@style/AppTheme.SettingsSubtitleStyle" />
            <View android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="0.0dip" />
            <EditText android:textSize="16.0sp" android:id="@id/profile_edit_name" android:paddingLeft="?android:listPreferredItemPaddingLeft" android:paddingRight="?android:listPreferredItemPaddingRight" android:nextFocusUp="@id/profile_edit_name" android:nextFocusDown="@id/profile_edit_username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/profile_enter_a_name_hint" android:maxLength="18" android:inputType="textCapWords" android:nextFocusForward="@id/profile_edit_username" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/global_username" style="@style/AppTheme.SettingsSubtitleStyle" />
            <EditText android:textSize="16.0sp" android:id="@id/profile_edit_username" android:paddingLeft="?android:listPreferredItemPaddingLeft" android:paddingRight="?android:listPreferredItemPaddingRight" android:nextFocusUp="@id/profile_edit_name" android:nextFocusDown="@id/profile_edit_headline" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="15" android:inputType="text" android:nextFocusForward="@id/profile_edit_headline" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_headline" style="@style/AppTheme.SettingsSubtitleStyle" />
            <EditText android:textSize="16.0sp" android:id="@id/profile_edit_headline" android:paddingLeft="?android:listPreferredItemPaddingLeft" android:paddingRight="?android:listPreferredItemPaddingRight" android:nextFocusUp="@id/profile_edit_username" android:nextFocusDown="@id/profile_edit_about" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/profile_headline_hint" android:maxLength="37" android:inputType="textCapSentences" android:nextFocusForward="@id/profile_edit_about" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_about_you" style="@style/AppTheme.SettingsSubtitleStyle" />
            <EditText android:textSize="16.0sp" android:id="@id/profile_edit_about" android:paddingLeft="?android:listPreferredItemPaddingLeft" android:paddingRight="?android:listPreferredItemPaddingRight" android:nextFocusUp="@id/profile_edit_headline" android:nextFocusDown="@id/profile_edit_age" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/profile_about_you" android:minLines="3" android:maxLength="400" android:inputType="textImeMultiLine" android:nextFocusForward="@id/profile_edit_age" />
            <TextView android:id="@id/profile_edit_hashtags_title" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_settings_hashtag_suggestions_label" style="@style/AppTheme.SettingsSubtitleStyle" />
            <TextView android:textSize="16.0sp" android:textColorLink="@color/hornet_gui_cyan" android:id="@id/profile_edit_hashtags" android:paddingLeft="?android:listPreferredItemPaddingLeft" android:paddingRight="?android:listPreferredItemPaddingRight" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_normal" android:layout_marginBottom="@dimen/spacing_normal" />
            <View android:id="@id/profile_edit_focus_trap_2" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="0.0dip" />
            <include layout="@layout/activity_settings_profile_lookups" />
            <TextView android:id="@id/profile_edit_kys_title" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_kys" android:drawableRight="@drawable/kys_info_icon" android:drawablePadding="15.0dip" android:drawableEnd="@drawable/kys_info_icon" style="@style/AppTheme.SettingsSubtitleStyle" />
            <Button android:textSize="14.0sp" android:textColor="@android:color/darker_gray" android:id="@id/profile_edit_kys_info" android:text="@string/profile_edit_kys_info_line2" style="@style/AppTheme.SettingsTextButtonStyle" />
            <Button android:id="@id/profile_edit_kys" android:text="@string/profile_kys_hint" style="@style/AppTheme.SettingsTextButtonStyle" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_unit_of_measure" style="@style/AppTheme.SettingsSubtitleStyle" />
            <Button android:id="@id/profile_units_of_measure" style="@style/AppTheme.SettingsTextButtonStyle" />
            <FrameLayout android:layout_width="fill_parent" android:layout_height="100.0dip">
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/hornet_logo_white" android:contentDescription="@string/app_name" />
            </FrameLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.FloatingActionButton android:id="@id/fab" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:src="@drawable/profile_edit_photos_fab" app:backgroundTint="@android:color/white" app:elevation="6.0dip" app:layout_anchor="@id/app_bar_layout" app:layout_anchorGravity="end|bottom|center" app:pressedTranslationZ="6.0dip" app:rippleColor="@color/hornet_gui_cyan" />
</android.support.design.widget.CoordinatorLayout>